# UCI-CS121-Search-Engine

./: .gitignore  README.md  TEST.txt  TODO.md  debug.txt
astro/: package-lock.json  package.json
astro/src/components/: Welcome.astro
astro/src/layouts/: Layout.astro
client/: .env  .gitignore  bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  App2.tsx  global.d.ts  main.tsx
python/: .gitignore  TODO.md  download.py  indexer.py  lazy_merger.py  main.py  posting.py  query.py  requirements.txt  save.py  tokenizer.py
python/src/: compression.py  download.py  filter.py  indexer.py  lazy_merger.py  main.py  posting.py  query.py  run_queries.py  similarity.py  tokenizer.py
rust/: Cargo.toml  ok.txt  test.txt
rust/src/: enable_page_rank.rs  file_skip_list.rs  id_book.rs  index_builder.rs  inverted_index.rs  lazy_merger.rs  main.rs  postings.rs  query.rs  single_posting.rs  tokenizer.rs
